Another large set of generics/java15 markup/feature usage.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@682067 13f79535-47bb-0310-9956-ffa450edef68